--- a/index.html
+++ b/index.html
@@ -59,6 +59,86 @@
     <!-- header ends -->
 
     <!-- hero starts -->
+    <div class="hero__container-slider main-wrapper">
+      <div class="slider__container">
+        <!-- <div
+          class="slider"
+          style="--width: 250px; --height: 205px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.JPG" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img11.jpg" alt="" />
+            </div>
+          </div>
+        </div> -->
+
+        <div
+          class="slider"
+          reverse="true"
+          style="--width: 175px; --height: 150px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img3.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="hero__container">
       <section class="hero main-wrapper">
         <div class="hero__logo">
@@ -102,7 +182,10 @@
     <!-- about starts -->
     <a name="about"></a>
     <section class="about__container">
-      <h3 class="section__title">About</h3>
+      <div>
+        <h3 class="section__title">About</h3>
+        <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
+      </div>
       <div class="about">
         <div class="about__card one">
           <div class="about__img">
@@ -238,7 +321,7 @@
     <a name="gallery"></a>
     <!-- Create links -->
     <section class="gallery__container">
-      <div class="gallery__title main-wrapper">
+      <div class="">
         <h3 class="section__title">Gallery</h3>
         <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
       </div>
@@ -324,7 +407,7 @@
     <a name="contact"></a>
     <section class="contact">
       <div class="contact__wrapper main-wrapper">
-        <div class="gallery__title main-wrapper">
+        <div class="main-wrapper">
           <h3 class="section__title">Contact</h3>
           <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
         </div>
@@ -403,86 +486,86 @@
     <!-- contact ends -->
 
     <!-- slider starts -->
-    <!-- <div class="hero__container-slider main-wrapper wow">
-        <div class="slider__container">
-          <div
-            class="slider"
-            style="--width: 250px; --height: 205px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.JPG" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img11.jpg" alt="" />
-              </div>
+    <div class="hero__container-slider main-wrapper wow">
+      <div class="slider__container">
+        <div
+          class="slider"
+          style="--width: 250px; --height: 205px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img4.jpg" alt="" />
             </div>
-          </div>
-
-          <div
-            class="slider"
-            reverse="true"
-            style="--width: 250px; --height: 230px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img3.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.JPG" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img11.jpg" alt="" />
             </div>
           </div>
         </div>
-      </div> -->
+
+        <div
+          class="slider"
+          reverse="true"
+          style="--width: 250px; --height: 230px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img3.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- slider ends -->
 
     <!-- scripts -->
