--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
   <body>
     <a name="home"></a>
     <!-- header starts -->
+    <div class="mobile-nav">
+      <ul class="mobile-nav__menu">
+        <li>
+          <a class="mobile-nav__link" href="#about">About Us</a>
+        </li>
+        <li>
+          <a class="mobile-nav__link" href="#gallery">Gallery</a>
+        </li>
+        <li>
+          <a class="mobile-nav__link" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
     <header class="header">
       <a class="header__link" href="#home"
         ><div class="header__left">
@@ -73,6 +86,7 @@
         </button>
       </nav>
     </header>
+
     <!-- header ends -->
 
     <!-- hero starts -->
