--- a/index.html
+++ b/index.html
@@ -453,7 +453,92 @@
       <h3 class="section__title">Contact</h3>
       <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
     </div>
+    <!-- slider starts -->
+    <!-- <div class="hero__container-slider main-wrapper wow">
+      <div class="slider__container">
+        <div
+          class="slider"
+          style="--width: 250px; --height: 205px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.JPG" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img11.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="slider"
+          reverse="true"
+          style="--width: 250px; --height: 230px; --quantity: 10"
+        >
+          <div class="slider__list">
+            <div class="slider__item" style="--position: 1">
+              <img src="/public/imgs/img10.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 2">
+              <img src="/public/imgs/img9.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 3">
+              <img src="/public/imgs/img8.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 4">
+              <img src="/public/imgs/img7.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 5">
+              <img src="/public/imgs/img6.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 6">
+              <img src="/public/imgs/img5.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 7">
+              <img src="/public/imgs/img4.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 8">
+              <img src="/public/imgs/img3.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 9">
+              <img src="/public/imgs/img2.jpg" alt="" />
+            </div>
+            <div class="slider__item" style="--position: 10">
+              <img src="/public/imgs/img1.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <!-- slider ends -->
     <section class="contact">
+      <div class="hero__logo wow fadeInUp" data-wow-delay="0.1s">
+        <img class="header__logo" src="/logo.png" alt="Logo image" />
+      </div>
       <div class="contact__wrapper main-wrapper">
         <p class="contact__text">
           We are always looking for new <br />
@@ -462,7 +547,7 @@
           potential ways we could work together?
         </p>
         <div class="btns__container">
-          <a class="btn" href="mailto:gortrans@live.com">
+          <a class="btn-v2" href="mailto:gortrans@live.com">
             <div>gortrans@live.com</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -480,7 +565,7 @@
             </svg>
           </a>
 
-          <a class="btn" href="tel:+13145047886">
+          <a class="btn-v2" href="tel:+13145047886">
             <div>314-504-7886</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -499,7 +584,7 @@
           </a>
 
           <a
-            class="btn"
+            class="btn-v2"
             href="https://www.google.com/maps?q=14+silvercote+dr,+wentzville,+mo+63385"
             target="_blank"
           >
@@ -526,151 +611,36 @@
           </a>
         </div>
       </div>
-      <!-- slider starts -->
-      <div class="hero__container-slider main-wrapper wow">
-        <div class="slider__container">
-          <div
-            class="slider"
-            style="--width: 250px; --height: 205px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.JPG" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img11.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-
-          <div
-            class="slider"
-            reverse="true"
-            style="--width: 250px; --height: 230px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img3.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- slider ends -->
     </section>
     <!-- contact ends -->
 
     <div class="footer">
-      <div class="container">
-        <div class="info">
-          <div class="row">
-            <div
-              class="col-md-4 wow fadeInUp"
-              data-wow-delay="0.3s"
-              id="address"
+      <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s" id="media">
+        <ul>
+          <li>
+            <a
+              href="https://www.facebook.com/p/Gorban-Transportation-100063706987319/"
+              target="_blank"
             >
-              <p>Workarea</p>
-              <h4>1287 Hidden Oak Dr,</h4>
-              <h4>Chesterfield,</h4>
-              <h4>MO 63017</h4>
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
 
-              <br /><br />
-            </div>
+          <li>
+            <a
+              href="https://www.instagram.com/gorbantransportation"
+              target="_blank"
+            >
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
 
-            <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s" id="media">
-              <ul>
-                <li>
-                  <a
-                    href="https://www.facebook.com/p/Gorban-Transportation-100063706987319/"
-                    target="_blank"
-                  >
-                    <ion-icon name="logo-facebook"></ion-icon>
-                  </a>
-                </li>
+          <!-- <li><ion-icon name="logo-twitter"></ion-icon></li> -->
 
-                <li>
-                  <a
-                    href="https://www.instagram.com/gorbantransportation"
-                    target="_blank"
-                  >
-                    <ion-icon name="logo-instagram"></ion-icon>
-                  </a>
-                </li>
+          <!-- <li><ion-icon name="logo-youtube"></ion-icon></li> -->
+        </ul>
 
-                <!-- <li><ion-icon name="logo-twitter"></ion-icon></li> -->
-
-                <!-- <li><ion-icon name="logo-youtube"></ion-icon></li> -->
-              </ul>
-
-              <br /><br />
-            </div>
-
-            <div class="col-md-4 wow fadeInUp" data-wow-delay="0.5s" id="mail">
-              <p>
-                Vladimir Gorban <br />
-                President, Gorban Transportation, Inc.
-              </p>
-
-              <h4>
-                Mail: gortrans@live.com <br />
-                Tel: 314-504-7886
-              </h4>
-
-              <br /><br />
-            </div>
-          </div>
-        </div>
+        <br /><br />
       </div>
     </div>
 
