--- a/index.html
+++ b/index.html
@@ -453,101 +453,105 @@
       <h3 class="section__title">Contact</h3>
       <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
     </div>
-    <!-- slider starts -->
-    <!-- <div class="hero__container-slider main-wrapper wow">
-      <div class="slider__container">
-        <div
-          class="slider"
-          style="--width: 250px; --height: 205px; --quantity: 10"
-        >
-          <div class="slider__list">
-            <div class="slider__item" style="--position: 1">
-              <img src="/public/imgs/img4.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 2">
-              <img src="/public/imgs/img5.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 3">
-              <img src="/public/imgs/img6.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 4">
-              <img src="/public/imgs/img7.JPG" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 5">
-              <img src="/public/imgs/img8.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 6">
-              <img src="/public/imgs/img9.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 7">
-              <img src="/public/imgs/img10.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 8">
-              <img src="/public/imgs/img1.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 9">
-              <img src="/public/imgs/img2.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 10">
-              <img src="/public/imgs/img11.jpg" alt="" />
-            </div>
-          </div>
-        </div>
 
-        <div
-          class="slider"
-          reverse="true"
-          style="--width: 250px; --height: 230px; --quantity: 10"
-        >
-          <div class="slider__list">
-            <div class="slider__item" style="--position: 1">
-              <img src="/public/imgs/img10.jpg" alt="" />
+    <section class="contact">
+      <div class="hero__container-slider main-wrapper wow">
+        <div class="slider__container">
+          <!-- <div
+            class="slider"
+            style="--width: 250px; --height: 205px; --quantity: 10"
+          >
+            <div class="slider__list">
+              <div class="slider__item" style="--position: 1">
+                <img src="/public/imgs/img4.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 2">
+                <img src="/public/imgs/img5.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 3">
+                <img src="/public/imgs/img6.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 4">
+                <img src="/public/imgs/img7.JPG" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 5">
+                <img src="/public/imgs/img8.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 6">
+                <img src="/public/imgs/img9.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 7">
+                <img src="/public/imgs/img10.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 8">
+                <img src="/public/imgs/img1.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 9">
+                <img src="/public/imgs/img2.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 10">
+                <img src="/public/imgs/img11.jpg" alt="" />
+              </div>
             </div>
-            <div class="slider__item" style="--position: 2">
-              <img src="/public/imgs/img9.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 3">
-              <img src="/public/imgs/img8.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 4">
-              <img src="/public/imgs/img7.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 5">
-              <img src="/public/imgs/img6.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 6">
-              <img src="/public/imgs/img5.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 7">
-              <img src="/public/imgs/img4.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 8">
-              <img src="/public/imgs/img3.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 9">
-              <img src="/public/imgs/img2.jpg" alt="" />
-            </div>
-            <div class="slider__item" style="--position: 10">
-              <img src="/public/imgs/img1.jpg" alt="" />
+          </div> -->
+
+          <div
+            class="slider"
+            reverse="true"
+            style="--width: 150px; --height: 120px; --quantity: 10"
+          >
+            <div class="slider__list">
+              <div class="slider__item" style="--position: 1">
+                <img src="/public/imgs/img10.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 2">
+                <img src="/public/imgs/img9.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 3">
+                <img src="/public/imgs/img8.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 4">
+                <img src="/public/imgs/img7.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 5">
+                <img src="/public/imgs/img6.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 6">
+                <img src="/public/imgs/img5.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 7">
+                <img src="/public/imgs/img4.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 8">
+                <img src="/public/imgs/img3.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 9">
+                <img src="/public/imgs/img2.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 10">
+                <img src="/public/imgs/img1.jpg" alt="" />
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div> -->
-    <!-- slider ends -->
-    <section class="contact">
-      <div class="hero__logo wow fadeInUp" data-wow-delay="0.1s">
+      <!-- slider ends -->
+      <!-- <div class="hero__logo wow fadeInUp" data-wow-delay="0.1s">
         <img class="header__logo" src="/logo.png" alt="Logo image" />
-      </div>
+      </div> -->
       <div class="contact__wrapper main-wrapper">
-        <p class="contact__text">
+        <p class="contact__text wow fadeInUp" data-wow-delay="0.2s">
           We are always looking for new <br />
           opportunities to collaborate. <br />
           Would you be open to discussing <br />
           potential ways we could work together?
         </p>
         <div class="btns__container">
-          <a class="btn-v2" href="mailto:gortrans@live.com">
+          <a
+            class="btn-v2 wow fadeInUp"
+            data-wow-delay="0.3s"
+            href="mailto:gortrans@live.com"
+          >
             <div>gortrans@live.com</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -565,7 +569,11 @@
             </svg>
           </a>
 
-          <a class="btn-v2" href="tel:+13145047886">
+          <a
+            class="btn-v2 wow fadeInUp"
+            data-wow-delay="0.4s"
+            href="tel:+13145047886"
+          >
             <div>314-504-7886</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -584,7 +592,8 @@
           </a>
 
           <a
-            class="btn-v2"
+            class="btn-v2 wow fadeInUp"
+            data-wow-delay="0.5s"
             href="https://www.google.com/maps?q=14+silvercote+dr,+wentzville,+mo+63385"
             target="_blank"
           >
@@ -615,32 +624,28 @@
     <!-- contact ends -->
 
     <div class="footer">
-      <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s" id="media">
-        <ul>
-          <li>
-            <a
-              href="https://www.facebook.com/p/Gorban-Transportation-100063706987319/"
-              target="_blank"
-            >
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
+      <div class="hero__logo wow fadeInUp" data-wow-delay="0.1s">
+        <img class="header__logo" src="/logo.png" alt="Logo image" />
+      </div>
+      <!-- slider starts -->
 
-          <li>
-            <a
-              href="https://www.instagram.com/gorbantransportation"
-              target="_blank"
-            >
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-          <!-- <li><ion-icon name="logo-twitter"></ion-icon></li> -->
-
-          <!-- <li><ion-icon name="logo-youtube"></ion-icon></li> -->
-        </ul>
-
-        <br /><br />
+      <p>
+        Vladimir Gorban President, <br />
+        Gorban Transportation, Inc.
+      </p>
+      <div class="footer__socials">
+        <a
+          href="https://www.facebook.com/p/Gorban-Transportation-100063706987319/"
+          target="_blank"
+        >
+          <ion-icon name="logo-facebook" class="footer__icon"></ion-icon>
+        </a>
+        <a
+          href="https://www.instagram.com/gorbantransportation"
+          target="_blank"
+        >
+          <ion-icon name="logo-instagram" class="footer__icon"></ion-icon>
+        </a>
       </div>
     </div>
 
