--- a/index.html
+++ b/index.html
@@ -455,92 +455,11 @@
     </div>
 
     <section class="contact">
-      <div class="hero__container-slider main-wrapper wow">
-        <div class="slider__container">
-          <!-- <div
-            class="slider"
-            style="--width: 250px; --height: 205px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.JPG" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img11.jpg" alt="" />
-              </div>
-            </div>
-          </div> -->
-
-          <div
-            class="slider"
-            reverse="true"
-            style="--width: 150px; --height: 120px; --quantity: 10"
-          >
-            <div class="slider__list">
-              <div class="slider__item" style="--position: 1">
-                <img src="/public/imgs/img10.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 2">
-                <img src="/public/imgs/img9.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 3">
-                <img src="/public/imgs/img8.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 5">
-                <img src="/public/imgs/img6.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 6">
-                <img src="/public/imgs/img5.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 7">
-                <img src="/public/imgs/img4.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 8">
-                <img src="/public/imgs/img3.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 9">
-                <img src="/public/imgs/img2.jpg" alt="" />
-              </div>
-              <div class="slider__item" style="--position: 10">
-                <img src="/public/imgs/img1.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- slider ends -->
       <!-- <div class="hero__logo wow fadeInUp" data-wow-delay="0.1s">
         <img class="header__logo" src="/logo.png" alt="Logo image" />
       </div> -->
       <div class="contact__wrapper main-wrapper">
-        <p class="contact__text wow fadeInUp" data-wow-delay="0.2s">
+        <p class="contact__text wow fadeInUp" data-wow-delay="0.3s">
           We are always looking for new <br />
           opportunities to collaborate. <br />
           Would you be open to discussing <br />
@@ -620,16 +539,97 @@
           </a>
         </div>
       </div>
+      <div class="hero__container-slider main-wrapper wow">
+        <div class="slider__container wow fadeInUp" data-wow-delay="0.5s">
+          <div
+            class="slider"
+            style="--width: 250px; --height: 205px; --quantity: 10"
+          >
+            <div class="slider__list">
+              <div class="slider__item" style="--position: 1">
+                <img src="/public/imgs/img4.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 2">
+                <img src="/public/imgs/img5.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 3">
+                <img src="/public/imgs/img6.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 4">
+                <img src="/public/imgs/img7.JPG" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 5">
+                <img src="/public/imgs/img8.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 6">
+                <img src="/public/imgs/img9.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 7">
+                <img src="/public/imgs/img10.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 8">
+                <img src="/public/imgs/img1.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 9">
+                <img src="/public/imgs/img2.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 10">
+                <img src="/public/imgs/img11.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="slider"
+            reverse="true"
+            style="--width: 150px; --height: 120px; --quantity: 10"
+          >
+            <div class="slider__list">
+              <div class="slider__item" style="--position: 1">
+                <img src="/public/imgs/img10.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 2">
+                <img src="/public/imgs/img9.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 3">
+                <img src="/public/imgs/img8.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 4">
+                <img src="/public/imgs/img7.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 5">
+                <img src="/public/imgs/img6.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 6">
+                <img src="/public/imgs/img5.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 7">
+                <img src="/public/imgs/img4.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 8">
+                <img src="/public/imgs/img3.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 9">
+                <img src="/public/imgs/img2.jpg" alt="" />
+              </div>
+              <div class="slider__item" style="--position: 10">
+                <img src="/public/imgs/img1.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- slider ends -->
     </section>
     <!-- contact ends -->
 
     <div class="footer">
-      <div class="hero__logo wow fadeInUp" data-wow-delay="0.1s">
+      <div class="hero__logo wow fadeInUp" data-wow-delay="0.2s">
         <img class="header__logo" src="/logo.png" alt="Logo image" />
       </div>
       <!-- slider starts -->
 
-      <p>
+      <p class="wow fadeInUp" data-wow-delay="0.2s">
         Vladimir Gorban President, <br />
         Gorban Transportation, Inc.
       </p>
@@ -638,13 +638,21 @@
           href="https://www.facebook.com/p/Gorban-Transportation-100063706987319/"
           target="_blank"
         >
-          <ion-icon name="logo-facebook" class="footer__icon"></ion-icon>
+          <ion-icon
+            name="logo-facebook"
+            class="footer__icon wow fadeInUp"
+            data-wow-delay="0.3s"
+          ></ion-icon>
         </a>
         <a
           href="https://www.instagram.com/gorbantransportation"
           target="_blank"
         >
-          <ion-icon name="logo-instagram" class="footer__icon"></ion-icon>
+          <ion-icon
+            name="logo-instagram"
+            class="footer__icon wow fadeInUp"
+            data-wow-delay="0.3s"
+          ></ion-icon>
         </a>
       </div>
     </div>
