--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
+                class="wow fadeInUp"
+                data-wow-delay="0.2s"
               >
                 <path
                   stroke-linecap="round"
@@ -221,6 +223,8 @@
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
+                class="wow fadeInUp"
+                data-wow-delay="0.2s"
               >
                 <path
                   stroke-linecap="round"
@@ -253,6 +257,8 @@
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
+                class="wow fadeInUp"
+                data-wow-delay="0.2s"
               >
                 <path
                   stroke-linecap="round"
