--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <img src="/public/imgs/img8.jpg" alt="" />
               </div>
               <div class="slider__item" style="--position: 4">
-                <img src="/public/imgs/img7.jpg" alt="" />
+                <img src="/public/imgs/img7.JPG" alt="" />
               </div>
               <div class="slider__item" style="--position: 5">
                 <img src="/public/imgs/img6.jpg" alt="" />
